Fix mobile-friendly - wrap tables in overflow div
By using a wrapper div we can prevent the table rendering from
misbehaving and still get the overflow benefits.

--- a/taskui/static/index.css
+++ b/taskui/static/index.css
@@ -6,13 +6,16 @@ body {
   margin: 16px 10%;
 }
 
+.tablewrapper {
+  display: block;
+  overflow-x: auto;
+}
+
 table {
 	border: double grey;
   border-collapse: collapse;
   margin: 16px 0px;
   width: 100%;
-  display: block;
-  overflow-x: auto;
 }
 
 td, th {
